[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Utilities/m3x6.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.568627, 0.568627, 0.568627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="CenterContainer" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
margin_left = 238.0
margin_top = 133.0
margin_right = 242.0
margin_bottom = 137.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 148.0
margin_bottom = 58.0

[node name="Button_Continue" type="HBoxContainer" parent="PauseMenu/PanelContainer/VBoxContainer"]
margin_right = 146.0
margin_bottom = 26.0

[node name="Selector" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer/Button_Continue"]
margin_right = 8.0
margin_bottom = 26.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer/Button_Continue"]
margin_left = 12.0
margin_right = 146.0
margin_bottom = 26.0
rect_min_size = Vector2( 134, 0 )
custom_fonts/font = SubResource( 2 )
text = "Continue"

[node name="Button_Quit" type="HBoxContainer" parent="PauseMenu/PanelContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 146.0
margin_bottom = 56.0

[node name="Selector" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer/Button_Quit"]
margin_right = 8.0
margin_bottom = 26.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer/Button_Quit"]
margin_left = 12.0
margin_right = 146.0
margin_bottom = 26.0
rect_min_size = Vector2( 134, 0 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
